...
  };

  return (
    <SafeAreaView className="flex-1 bg-slate-900 justify-center">
      <ScrollView contentContainerStyle={{ paddingHorizontal: 32, justifyContent: 'center', flexGrow: 1 }}>
        <View className="mb-10">
          <Text className="text-4xl text-white font-bold tracking-tight">Join AfyaToken</Text>
          <Text className="text-slate-400 text-lg mt-2">Create your citizen health wallet</Text>
        </View>

        <View className="space-y-4 mb-6">
          <View>
            <Text className="text-slate-300 font-medium mb-1 ml-1">Full Name</Text>
...
